# MDB-Server

./: CMakeLists.txt  Server.c  Server.h  main.c  movies.csv
MovieEntities/: Movie.c  Movie.h  MovieDatabase.c  MovieDatabase.h
Scratches/: Stuffs.md
info/: CreateInfo.c  CreateInfo.h  LoginInfo.c  LoginInfo.h  SessionInfo.c  SessionInfo.h  TransactionInfo.c  TransactionInfo.h
util/: socket_helper.c  socket_helper.h  stb_ds.h
